Fix button position on small screens

--- a/custom.css
+++ b/custom.css
@@ -46,7 +46,7 @@ body {
 }
 
 .qa {
-    min-height: 6rem;
+    min-height: 7rem;
     display: flex;
     justify-content: center;
     align-items: center;
